# racoes_bot

./: .gitignore  Cargo.toml
src/: bot.rs  db.rs  err.rs  main.rs  tg.rs  tz.rs
src/entities/: mod.rs  prelude.rs  users.rs
src/entity/: user.rs
src/migration/: m20240130_040822_create_tables.rs  mod.rs
